Fix pool by replacing pointer-events: visible with a viable alternative

--- a/code/ui/CursorController.scss
+++ b/code/ui/CursorController.scss
@@ -2,7 +2,8 @@
     position: absolute;
     left: 0px;
     top: 0px;
-    width: 100%;
-    height: 100%;
-    pointer-events: visible;
+    width: 0px;
+    height: 0px;
+    display: none;
+    pointer-events: all;
 }
