--- a/code/ui/Hud.scss
+++ b/code/ui/Hud.scss
@@ -1,11 +1,10 @@
-﻿rootpanel
-{
+﻿rootpanel {
 	background-color: rgba( #333, 0 );
 	transition: background-color 0.2s ease-in;
 	transform-origin: 50% 50%;
+	pointer-events: none;
 
-	&.devcamera
-	{
+	&.devcamera {
 		display: none;
 	}
 }
@@ -17,7 +16,6 @@
 	top: 64px;
 	left: 0;
 	right: 0;
-	pointer-events: none;
 }
 
 .footer {
@@ -30,6 +28,5 @@
 	bottom: 64px;
 	left: 0;
 	right: 0;
-	pointer-events: none;
 	height: 60px;
 }
